# MPIRPC

./: README.md
src/: CMakeLists.txt  MPIRPCConfig.cmake  alignment.hpp  buffer.hpp  common.hpp  construction_info.hpp  exceptions.hpp  forwarders.hpp  lambda.hpp  manager.cpp  manager.hpp  marshaller.hpp  marshalling.hpp  mpitype.cpp  mpitype.hpp  objectwrapper.cpp  objectwrapper.hpp  orderedcall.hpp  parameter_buffer.hpp  parameterstream.cpp  parameterstream.hpp  pointerwrapper.hpp  polymorphic.hpp  reduce.cpp  reduce.hpp  remarshaller.hpp  type_constructor.hpp  types.hpp  unmarshaller.hpp  unmarshalling.hpp
src/concepts/: stl.hpp
src/detail/: unmarshaller.hpp
src/detail/manager/: function.hpp  invoke.hpp  manager.hpp  register.hpp
src/internal/: alignment.hpp  apply_buffer.hpp  direct_initializer.hpp  function_attributes.hpp  marshalling.hpp  orderedcall.hpp  parameterstream.hpp  pass_back.hpp  piecewise_allocator_traits.hpp  polymorphic.hpp  type_massaging.hpp  type_properties.hpp  unmarshalling.hpp  utility.hpp
src/internal/detail/: alignment.hpp  apply_buffer.hpp  orderedcall.hpp  utility.hpp
src/internal/reconstruction/: aligned_type_holder.hpp  alignment.hpp  construction_info.hpp  parameter_container.hpp  type_conversion.hpp  type_properties.hpp
src/internal/reconstruction/detail/: alignment.hpp  parameter_container.hpp  stored_arguments_info.hpp
src/tests/: CMakeLists.txt  aligned_type_holder_test.cpp  example.cpp  manager_test.cpp  mpirpctest.cpp  mpirpctest.hpp  reconstruct_test.cpp  type_massaging_test.cpp  utility_test.cpp
